<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar

        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/AppTheme"





        android:background="?attr/colorPrimary">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="left"
            android:layout_gravity="center"
            android:weightSum="4">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="STEP 1 > "
                android:textColor="@color/bg_grey"
                android:textSize="15dp"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="STEP 2 "
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="15dp"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="> STEP 3 "

                android:textColor="@color/bg_grey"
                android:textSize="15dp"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="> STEP 4"
                android:textColor="@color/bg_grey"
                android:textSize="15dp"
                android:layout_gravity="center"
                />

        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#6aa0c4"
            android:layout_gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/choose_option"
                android:textSize="15dp"
                android:textAllCaps="true"
android:textStyle="bold"
                android:textColor="@color/white"
                />
        </LinearLayout>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_tname"
            android:textSize="16dp"
           android:paddingRight="10dp"
            android:paddingTop="15dp"
            android:paddingLeft="10dp"
            android:textColor="@color/black"
            />
        <LinearLayout
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et"
                android:paddingTop="10dp"
android:textSize="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Eg: Revision Test"
                android:background="@drawable/edittext_bg"
                android:padding="10dp"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/numberqusestion"
            android:textSize="16dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="15dp"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtview"
            android:visibility="gone"/>
        <LinearLayout
            android:paddingTop="10dp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:layout_gravity="center_horizontal"
                android:id="@+id/stateSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_spinner"
                />
        </LinearLayout>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/numbermints"
            android:textSize="16dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="7dp"
            android:textColor="@color/black"
            />





        <LinearLayout
            android:paddingTop="10dp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:layout_gravity="center_horizontal"
                android:id="@+id/stateSpinners"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_spinner"
                />
        </LinearLayout>




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_reptquestion"
            android:textSize="16dp"
            android:visibility="gone"
            android:paddingTop="20dp"
            android:textColor="@color/black"
            />
        <LinearLayout
            android:paddingTop="10dp"
            android:visibility="gone"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/repetwrong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/gradient_spinner" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_mark"
            android:textSize="16dp"
            android:visibility="gone"

            android:paddingTop="20dp"
            android:textColor="@color/black"
            />
        <LinearLayout
            android:paddingTop="10dp"
            android:visibility="gone"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:layout_gravity="center_horizontal"
                android:id="@+id/mark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_spinner"
                />
        </LinearLayout>



            <LinearLayout
                android:id="@id/ButtonsLinearLayout"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:orientation="horizontal"
                android:layout_gravity="bottom"

                android:layout_alignParentBottom="true">

                <Button
                    android:id="@+id/backb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="bottom"
                    android:background="#3498DB"
                    android:text="BACK"
                    android:textColor="@color/white" />
                <Button
                    android:id="@+id/submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="Next"
                    android:layout_gravity="bottom"
                    android:background="#2980B9 "
                    android:layout_weight="1" />





        </LinearLayout>


    </LinearLayout>
</LinearLayout>