<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_account_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="10dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/linear_account_input_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/menuResetPwd"
                    android:textSize="18dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="12dp"
                    android:layout_weight="1"
                    android:background="@color/cement"
                    android:orientation="horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">


                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center_vertical"
                        android:layout_toLeftOf="@+id/tvPassword"
                        android:background="@android:color/transparent"
                        android:hint="@string/newPwd"
                        android:inputType="textPassword"
                        android:paddingLeft="10dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="14dp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/tvPassword"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="12dp"
                        android:background="@drawable/ic_password"
                        android:gravity="center" />

                </RelativeLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/button_edgelogin"
        android:gravity="center"
        android:text="Cancel"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnResetPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/button_edgelogin"
        android:gravity="center"
        android:text="@string/btnFgtPwd"
        android:textColor="@color/white" />

</LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>