<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lay_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey"
    android:orientation="vertical">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <ScrollView
        android:id="@+id/scrolView_account"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <RelativeLayout
            android:id="@+id/linear_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView_account_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="10dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp"
                    app:cardUseCompatPadding="true">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:orientation="vertical">


                        <LinearLayout
                            android:id="@+id/linear_account_input_details"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="60dp"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:gravity="center"
                                android:text="@string/hintUserFgtPwd"
                                android:textSize="18dp" />

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_margin="12dp"
                                android:layout_weight="1"
                                android:background="@color/cement"
                                android:orientation="horizontal"
                                android:paddingTop="10dp"
                                android:paddingBottom="10dp">


                                <EditText
                                    android:id="@+id/etMobNum"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_centerInParent="true"
                                    android:layout_gravity="center_vertical"
                                    android:layout_toLeftOf="@+id/tvMobNum"
                                    android:background="@android:color/transparent"
                                    android:ems="10"
                                    android:hint="@string/hintMobNum"
                                    android:inputType="number"
                                    android:paddingLeft="10dp"
                                    android:textColor="@color/black"
                                    android:textSize="14dp"
                                    android:textStyle="normal" />


                                <TextView
                                    android:id="@+id/tvMobNum"
                                    android:layout_width="25dp"
                                    android:layout_height="25dp"
                                    android:layout_alignParentRight="true"
                                    android:layout_gravity="center_vertical"
                                    android:layout_marginRight="12dp"
                                    android:background="@drawable/ic_phone"
                                    android:gravity="center" />

                            </RelativeLayout>

                            <Button
                                android:id="@+id/btnFgtPwd"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="12dp"
                                android:layout_marginRight="12dp"
                                android:background="@drawable/button_edgelogin"
                                android:gravity="center"
                                android:text="@string/btnFgtPwd"
                                android:textColor="@color/white" />


                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="40dp"
                android:gravity="center">

                <LinearLayout

                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/ic_circular_shape"
                    >

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:gravity="center"
                        android:background="@drawable/ic_circular_shape"
                        android:src="@drawable/ic_person" />

                </LinearLayout>

                <!--                <ImageView-->
                <!--                    android:id="@+id/img_dp"-->
                <!--                    android:layout_width="100dp"-->
                <!--                    android:layout_height="100dp"-->
                <!--                    android:layout_centerInParent="true"-->
                <!--                    android:layout_gravity="center"-->
                <!--                    android:background="@drawable/ic_circular_shape"-->
                <!--                    android:src="@drawable/ic_person" />-->


            </RelativeLayout>

        </RelativeLayout>


    </ScrollView>


</RelativeLayout>